--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <title>Reddit Bookmarks Library</title>
 </head>
 <body>
-  <h1>Reddit Bookmarks Library</h1>
+  <div id="root"></div>
 </body>
 </html>
